fixed main gradient background; styled scrollbar

--- a/client/src/styles/nekogoo/main.scss
+++ b/client/src/styles/nekogoo/main.scss
@@ -5,6 +5,8 @@ body {
   /* background-image: linear-gradient(#3CC, #6FF); */
   background-color: #ccffff;
   background-image: linear-gradient(to bottom right, #ccffff, white);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 /* @media screen and (min-width: 600px) {
     body {
@@ -12,6 +14,39 @@ body {
         background-image: linear-gradient(lavender, lavender);
     }
 } */
+
+// --- SCROLLBAR STYLES (https://codepen.io/GhostRider/pen/oNvoNv) ---
+body::-webkit-scrollbar {
+  width: 8px;
+  // background-color: #f5f5f5;
+  background-color: #ffccff;
+}
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  // border-radius: 10px;
+  // background-color: #f5f5f5;
+  background-color: #ffccff;
+}
+body::-webkit-scrollbar-thumb {
+  // border-radius: 10px;
+  background-color: #fff;
+  // background-image: -webkit-gradient(
+  //   linear,
+  //   40% 0%,
+  //   75% 84%,
+  //   from(#00ffff),
+  //   to(#00ffff),
+  //   color-stop(0.6, #99ffff)
+  // );
+  background-image: -webkit-gradient(
+    linear,
+    40% 0%,
+    75% 84%,
+    from(#660066),
+    to(#660066),
+    color-stop(0.6, #cc00cc)
+  );
+}
 
 img {
   max-width: 100%;
